--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.0</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        <testSource>1.8</testSource>
+        <testTarget>1.8</testTarget>
+    </configuration>
+</plugin>
+</plugins>
+  </build>
 </project>
