--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,33 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.raumzeitfalle.niohttp</groupId>
-  <artifactId>niohttp</artifactId>
-  <packaging>jar</packaging>
-  <version>0.1-SNAPSHOT</version>
-  <name>NIOHttp</name>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-	<dependency>
-	    <groupId>org.hamcrest</groupId>
-	    <artifactId>hamcrest-all</artifactId>
-	    <version>1.3</version>
-	</dependency>
-  </dependencies>
-  <build>
-  <plugins>
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.0</version>
-    <configuration>
-        <source>1.8</source>
-        <target>1.8</target>
-        <testSource>1.8</testSource>
-        <testTarget>1.8</testTarget>
-    </configuration>
-</plugin>
-</plugins>
-  </build>
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>net.raumzeitfalle.niohttp</groupId>
+    <artifactId>niohttp</artifactId>
+    <version>0.1-SNAPSHOT</version>
+
+    <name>NIOHttp</name>
+
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+    </dependencies>
+
 </project>
